--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -34,4 +34,6 @@ SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=25.000000),UpperBound=(
 [URL]
 GameName=Ronin_4_26
 
+[/Script/LuminRuntimeSettings.LuminRuntimeSettings]
+FrameTimingHint=Maximum
 
